--- a/views/admin/edit.hbs
+++ b/views/admin/edit.hbs
@@ -84,15 +84,29 @@
 
                 <h2>Edit Information</h2>
 
-                <form>
+                <form id="donors">
                   <label for="First_Name">First Name</label>
                   <input type="text" id="Fname" name="First_Name">
                   <label for="Last_Name"> Last Name</label>
                   <input type="text" id="Lname" name="Last_Name">
                   <label for="Phone">Phone</label>
                   <input type="text" id="Phone" name="Phone">
-                  <label for="email">Email</label>
-                  <input type="text" id="email" name="email">
+                  <label for="emailD">Email</label>
+                  <input type="text" id="emailD" name="emailD">
+                  <button class="btn btn-primary" data-toggle="modal" data-target="#confirmBox">Submit</button>
+                </form>
+
+                <form id="organization">
+                  <label for="Name">Name</label>
+                  <input type="text" id="Name" name="Name">
+                  <label for="orgEmail"> Email</label>
+                  <input type="text" id="orgEmail" name="orgEmail">
+                  <label for="Description">Description</label>
+                  <input type="text" id="Description" name="Description">
+                  <label for="PhoneO">Phone</label>
+                  <input type="text" id="PhoneO" name="PhoneO">
+                  <label for="Address">Address</label>
+                  <input type="address" id="Address" name="Address">
                   <button class="btn btn-primary" data-toggle="modal" data-target="#confirmBox">Submit</button>
                 </form>
  
