I forgot what I did

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -52,7 +52,7 @@
                             <a class="nav-link btn-outline-warning rounded-pill px-3" href="/charity">Charity</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-warning rounded-pill px-3" href="/Organization/Organization_home">Organizations</a>
+                            <a class="nav-link btn-outline-warning rounded-pill px-3" href="/Organization">Organizations</a>
     
                         </li>
                         <li class="nav-item">
