--- a/views/home.hbs
+++ b/views/home.hbs
@@ -55,9 +55,9 @@
                             <a class="nav-link btn-outline-warning rounded-pill px-3" href="/Organization">Organizations</a>
     
                         </li>
-                        <li class="nav-item">
+                        {{!-- <li class="nav-item">
                             <a class="nav-link btn-outline-warning rounded-pill px-3" href="/donate">Donate</a>
-                        </li>
+                        </li> --}}
                         <li class="nav-item">
                             <a class="nav-link btn-outline-warning rounded-pill px-3" href="/contact-us">Contact</a>
                         </li>
