--- a/views/Organization/Organization_home.hbs
+++ b/views/Organization/Organization_home.hbs
@@ -80,16 +80,17 @@
 
     .sidebar .nav-link {
       font-weight: 500;
-      color: #333;
+      color: #006b57
+;
     }
 
     .sidebar .nav-link .feather {
       margin-right: 4px;
-      color: #727272;
+      color: #fdd55a;
     }
 
     .sidebar .nav-link.active {
-      color: #007bff;
+      color: #fdd55a;
     }
 
     .sidebar .nav-link:hover .feather,
@@ -107,7 +108,7 @@
       padding-top: .75rem;
       padding-bottom: .75rem;
       font-size: 1rem;
-      background-color: rgba(0, 0, 0, .25);
+      background-color: #006b57;
       box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
     }
 
