--- a/views/Organization/Create_donation.hbs
+++ b/views/Organization/Create_donation.hbs
@@ -78,16 +78,16 @@
 
     .sidebar .nav-link {
       font-weight: 500;
-      color: #333;
+      color: #006b57;
     }
 
     .sidebar .nav-link .feather {
       margin-right: 4px;
-      color: #727272;
+      color: #fdd55a;
     }
 
     .sidebar .nav-link.active {
-      color: #007bff;
+      color: #fdd55a;
     }
 
     .sidebar .nav-link:hover .feather,
@@ -105,7 +105,7 @@
       padding-top: .75rem;
       padding-bottom: .75rem;
       font-size: 1rem;
-      background-color: rgba(0, 0, 0, .25);
+      background-color: #006b57;
       box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
     }
 
@@ -120,15 +120,29 @@
       border-radius: 0;
     }
 
+    .navbar-nav{
+      background-color: #006b57;
+    }
+
+    .navbar-nav-px-3{
+      background-color: #006b57;
+    }
+
+
+
     .form-control-dark {
       color: #fff;
-      background-color: rgba(255, 255, 255, .1);
-      border-color: rgba(255, 255, 255, .1);
+      background-color: #006b57;
+      border-color: #006b57;
     }
 
     .form-control-dark:focus {
       border-color: transparent;
       box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+    }
+
+    #Nam{
+      color: #fdd55a
     }
   </style>
 </head>
@@ -141,7 +155,7 @@
       data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
+    {{!-- <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">--}}
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
         <a class="nav-link" href="/logout">Sign out</a>
