--- a/views/Organization/donations_posted.hbs
+++ b/views/Organization/donations_posted.hbs
@@ -23,6 +23,14 @@
     crossorigin="anonymous"></script>
 
   <style>
+    @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap");
+    * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Open Sans";
+    font-size: 1.2 rem;
+}
     .bd-placeholder-img {
       font-size: 1.125rem;
       text-anchor: middle;
@@ -80,16 +88,16 @@
 
     .sidebar .nav-link {
       font-weight: 500;
-      color: #333;
+      color: #006b57;
     }
 
     .sidebar .nav-link .feather {
       margin-right: 4px;
-      color: #727272;
+      color: #fdd55a;
     }
 
     .sidebar .nav-link.active {
-      color: #007bff;
+      color: #fdd55a;
     }
 
     .sidebar .nav-link:hover .feather,
@@ -107,7 +115,7 @@
       padding-top: .75rem;
       padding-bottom: .75rem;
       font-size: 1rem;
-      background-color: rgba(0, 0, 0, .25);
+      background-color: #006b57;
       box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
     }
 
@@ -122,15 +130,28 @@
       border-radius: 0;
     }
 
+    .navbar-nav{
+      background-color: #006b57;
+    }
+
+    .navbar-nav-px-3{
+      background-color: #006b57;
+    }
+
+
     .form-control-dark {
       color: #fff;
-      background-color: rgba(255, 255, 255, .1);
-      border-color: rgba(255, 255, 255, .1);
+      background-color: #006b57;
+      border-color: #006b57;
     }
 
     .form-control-dark:focus {
       border-color: transparent;
       box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+    }
+
+    #Nam{
+      color: #fdd55a
     }
   </style>
 </head>
