--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -9600,7 +9600,7 @@ fieldset:disabled .btn {
 
 /* line 50, src/assets/scss/mixins/_utilities.scss */
 .bg-success {
-  background-color: #198754 !important;
+  background-color: #006b57 !important;
 }
 
 /* line 50, src/assets/scss/mixins/_utilities.scss */
