--- a/public/assets/css/donations/organization.css
+++ b/public/assets/css/donations/organization.css
@@ -308,3 +308,7 @@ footer a.text-light:hover {
     color: #bfbfbf !important;
     transition-duration: 0.15s;
 }
+
+.colorbg{
+    background-color: #ffffff !important;
+}
