--- a/views/admin/admin-view-donations-posted.hbs
+++ b/views/admin/admin-view-donations-posted.hbs
@@ -74,11 +74,11 @@
             </nav>
 
             <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                {{!-- <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2">Dashboard</h1>
-                </div>
+                </div> --}}
 
-                <h2>Table of Organizations</h2>
+                <h3>Donations Posted</h3>
                 <div class="table-responsive">
                     <table class="table table-striped table-sm">
                         <thead>
