--- a/views/donations/organizations.hbs
+++ b/views/donations/organizations.hbs
@@ -79,10 +79,10 @@
 
 
     <div class="table-responsive">
-        <table class="table table-striped-columns
+        <table class="table
         table-hover	
-        table-borderless
-        table-warning
+        table-borderd
+        
         align-middle">
             <thead class="table-dark">
                 <caption>List of Organizations</caption>
