Added the donations and made the organization view the donations received and have the ability to mark as received

--- a/views/Donors/Donor_profile.hbs
+++ b/views/Donors/Donor_profile.hbs
@@ -111,15 +111,16 @@
         <div class="row">
           <div class="col-md-16">
             <div class="card mb-4 mb-md-0">
-              <div class="card-body">
+              <div class="card-body" id="cards">
                 <p class="mb-4">Your recent <span class="txt">Donations</span> 
                 </p>
-                <p class="mb-1" style="font-size: .77rem;">children's home</p>
-                <p class="txt">500KSH</p>
+                {{!-- <p class="mb-1" style="font-size: .77rem;">children's home</p>
+                <p class="mb-1"> TOYS</p>
+                <p class="txt">500KSH <span class="text-warning"> RECEIVED</span></p>
                 <p class="mt-4 mb-1" style="font-size: .77rem;">Orphanage</p>
-                <p class="txt">100KSH</p>
+                <p class="txt">100KSH <span class="text-danger">NOT RECEIVED</span></p>
                 <p class="mt-4 mb-1" style="font-size: .77rem;">Church</p>
-                <p class="txt">2000KSH</p>
+                <p class="txt">2000KSH</p> --}}
               </div>
             </div>
           </div>
