--- a/views/donations/donate_form.hbs
+++ b/views/donations/donate_form.hbs
@@ -14,6 +14,38 @@
     <link rel="stylesheet" href="../../assets/css/donations/organization.css">
 
     <style>
+        
+.pop-up {
+    background-color: #12c0a0;
+    width: 400px;
+    height: 200px;
+    position: absolute;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    transition: 2s;
+    box-shadow: #fabd08;
+    border: 3px solid #fabd08
+}
+
+.pop-up>* {
+    text-align: center;
+    width: 100%;
+}
+
+.pop-up button {
+    width: fit-content !important;
+}
+
+.pop-up.hide {
+    /* top: -100; */
+    z-index: -1000;
+    display: none;
+    /* transition: 2s; */
+}
+
         .btn {
             background-color: #fdd55a;
             color: #006b57;
@@ -107,7 +139,7 @@
             <label for="amount">
                 Amount
             </label>
-            <input type="text" name="amout" id="amount">
+            <input type="text" name="amout" id="amount" placeholder="KSH">
             <label for="anonymous">Would you like to be anonymous?</label>
             <input type="checkbox" name="anonymous" id="anonymous">
             <input type="submit" value="Submit">
@@ -115,7 +147,7 @@
 
     </div>
 
-    <button class="btn btn-success" id="unique" data-toggle="modal" data-target="#someBox" style="display: none;">BTN</button>
+    {{!-- <button class="btn btn-success" id="unique" data-toggle="modal" data-target="#someBox" style="display: none;">BTN</button> --}}
     <!-- Start Footer -->
     <footer class="bg-success pt-4">
         <div class="container">
@@ -205,9 +237,15 @@
     <!-- End Footer -->
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" id="unique">
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" id="unique" style="display: none;">
   Launch demo modal
 </button>
+
+
+        <div class="pop-up hide">
+            <div class="message"></div>
+            <button class="btn" id="close">Close</button>
+        </div>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -218,11 +256,11 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
+        <div id="message"></div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        {{!-- <button type="button" class="btn btn-primary">Save changes</button> --}}
       </div>
     </div>
   </div>
