--- a/views/Charities.hbs
+++ b/views/Charities.hbs
@@ -79,7 +79,8 @@
 
    <div class="headers">
         <h1>Charities</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        <p>Join us in making a difference today! - By partnering with us, you can make an immediate impact in the lives of those in need. <br>
+            Together, we can create a better world for all.</p>
     </div>
 
     <div class="container">
@@ -87,11 +88,10 @@
             <div class="pictures">
                 <img src="./assets/images/bg.jpg" />
 
-                <h2>Westwood Library Center</h2>
+                <h2>Brighter Futures Foundation</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur cumque, asperiores iste ipsam
-                    aut atque repellat maxime ab nihil doloribus, pariatur officia, soluta facere nam? Nostrum laborum
-                    molestias mollitia dignissimos.
+                    Helps to provide critical resources and support to children in need, including education, healthcare, and food assistance. 
+                    Works to ensure that every child has the opportunity to thrive and reach their full potential.
                 </p>
             </div>
         </div>
@@ -100,24 +100,22 @@
             <div class="pictures">
                 <img src="./assets/images/pic.jpg" />
 
-                <h2>Hampstead House</h2>
+                <h2>Compassionate Hearts Charity</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur cumque, asperiores iste ipsam
-                    aut atque repellat maxime ab nihil doloribus, pariatur officia, soluta facere nam? Nostrum laborum
-                    molestias mollitia dignissimos.
+                    Support research, education, and advocacy efforts aimed at preventing and treating illnesses and diseases. 
+                    Work to improve the health and well-being of individuals and communities around the world.
                 </p>
             </div>
         </div>
 
         <div class="inner-container">
             <div class="pictures">
-                <img src="./assets/images/pic.jpg" />
+                <img src="./assets/images/pic4.jpg" />
 
-                <h2>Lightworth Cultural Center</h2>
+                <h2>Rise Above Charity</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur cumque, asperiores iste ipsam
-                    aut atque repellat maxime ab nihil doloribus, pariatur officia, soluta facere nam? Nostrum laborum
-                    molestias mollitia dignissimos.
+                    Provide immediate assistance to communities affected by natural disasters, such as hurricanes, earthquakes, and wildfires. 
+                    Work to provide food, shelter, medical assistance, and other critical resources to those in need.
                 </p>
             </div>
         </div>
@@ -126,42 +124,41 @@
     <div class="container">
         <div class="inner-container">
             <div class="pictures">
-                <img src="./assets/images/pic.jpg" />
+                <img src="./assets/images/pic2.jpg" />
 
-                <h2>Westwood Apartment Complex</h2>
+                <h2>Dream Builders Charity</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur cumque, asperiores iste ipsam
-                    aut atque repellat maxime ab nihil doloribus, pariatur officia, soluta facere nam? Nostrum laborum
-                    molestias mollitia dignissimos.
+                    Work to combat food insecurity and provide food assistance to individuals and families in need. 
+                    Often partner with local food banks and community organizations to distribute meals and other resources.
                 </p>
             </div>
         </div>
 
         <div class="inner-container">
             <div class="pictures">
-                <img src="./assets/images/pic.jpg" />
+                <img src="./assets/images/pic3.jpg" />
 
-                <h2>Everready Office Building</h2>
+                <h2>Healing Hands Charity</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur cumque, asperiores iste ipsam
-                    aut atque repellat maxime ab nihil doloribus, pariatur officia, soluta facere nam? Nostrum laborum
-                    molestias mollitia dignissimos.
+                    Provide support, education, and advocacy for individuals living with mental illness and their families. 
+                    These organizations work to reduce stigma, increase access to mental health resources, and promote overall mental health and well-being.
                 </p>
             </div>
         </div>
 
         <div class="inner-container">
             <div class="pictures">
-                <img src="./assets/images/pic.jpg" />
+                <img src="./assets/images/pic5.jpg" />
 
-                <h2>Alpine Resort</h2>
+                <h2>Light the Way Charity</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur cumque, asperiores iste ipsam
-                    aut atque repellat maxime ab nihil doloribus, pariatur officia, soluta facere nam? Nostrum laborum
-                    molestias mollitia dignissimos.
+                    Work to promote and protect the rights of individuals and communities around the world, including advocating for gender equality, 
+                    ending discrimination, and combating human trafficking and exploitation.
                 </p>
             </div>
         </div>
+
+        
 
 </body>
 </html>
