--- a/views/Organization/donations_posted.hbs
+++ b/views/Organization/donations_posted.hbs
@@ -21,6 +21,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
     integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
     crossorigin="anonymous"></script>
+    
 
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap");
@@ -153,6 +154,18 @@
     #Nam{
       color: #fdd55a
     }
+    #header {
+    display: flex;
+    justify-content: space-between;
+    color: #006b57;
+}
+
+      #header .active,
+      a {
+          color: #006b57;
+          text-decoration: none;
+      }
+
   </style>
 </head>
 
