--- a/views/admin/Admin-dashboard.hbs
+++ b/views/admin/Admin-dashboard.hbs
@@ -13,6 +13,13 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
     
     <title>Admin Dashboard</title>
+
+    <style>
+      #btn.btn-success{
+        background-color: #006b57;
+        color: #fdd55a;
+      }
+    </style>
 </head>
 
 <body onload="getInfo('organizations')">
