--- a/views/donations/donate_form.hbs
+++ b/views/donations/donate_form.hbs
@@ -158,8 +158,9 @@
                         <!--<i class='bx bx-buildings bx-sm text-light'></i> -->
                     </a>
                     <p class="text-light my-lg-4 my-2">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut.
+                        Be the change you want to see in the world - <br>
+                        We believe that everyone has the power to make a difference. <br>
+                        Join us in creating a brighter future for all.
                     </p>
                     <ul class="list-inline footer-icons light-300">
                         <li class="list-inline-item m-0">
