--- a/views/home.hbs
+++ b/views/home.hbs
@@ -100,15 +100,10 @@
                                   <br> <strong>One Cause at a time</strong>
                               </h1>
                                 <p class="banner-body text-muted py-3 mx-0 px-0">
-                                    Sit laborum ab, eius fugit doloribus tenetur 
-                                    fugiat, temporibus enim commodi iusto libero magni deleniti quod quam 
-                                    consequuntur! Commodi minima excepturi repudiandae velit hic maxime
-                                    doloremque. Quaerat provident commodi consectetur veniam similique ad 
-                                    earum omnis ipsum saepe, voluptas, hic voluptates pariatur est explicabo 
-                                    fugiat, dolorum eligendi quam cupiditate excepturi mollitia maiores labore 
-                                    suscipit quas? Nulla, placeat. 
+                                    By supporting our charities, you are helping us expand our reach and deepen our impact. 
+                                    Your contribution can make a meaningful difference in the world.
                               </p>
-                                <a class="btn" href="/donate" role="button">Get Started</a>
+                                <a class="btn" href="/Organization" role="button">Get Started</a>
                             </div>
                         </div>
 
@@ -121,15 +116,11 @@
                                     <strong>About Us</strong>
                                 </h1>
                                 <p class="banner-body text-muted py-3">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                                    optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-                                    obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                                    nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-                                    tenetur error, harum nesciunt ipsum debitis quas aliquid.
+                                   We invite you to join us in our mission to make a positive impact in the world. Whether through a donation, volunteering, or spreading awareness 
+                                   about our work, every contribution helps us move closer to our vision. 
+                                   Thank you for your support, and together we can make a difference.
                                 </p>
-                                <a class="btn" href="/donate" role="button">Get Started</a>
+                                <a class="btn" href="/Organization" role="button">Get Started</a>
                             </div>
                         </div>
 
@@ -145,14 +136,10 @@
                                     
                                 </h1>
                                 <p class="banner-body text-muted py-3">
-                                    Reprehenderit,
-                                    quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos 
-                                    sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
-                                    recusandae alias error harum maxime adipisci amet laborum. Perspiciatis 
-                                    minima nesciunt dolorem! Officiis iure rerum voluptates a cumque velit 
-                                    quibusdam sed amet tempora.
+                                    Our charities are dedicated to making a positive impact in the world. 
+                                    By supporting us, you can help us achieve our mission and create a better future for all.
                                 </p>
-                                <a class="btn" href="/donate" role="button">Get Started</a>
+                                <a class="btn" href="/Organization" role="button">Get Started</a>
                             </div>
                         </div>
 
@@ -196,24 +183,29 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      {{!-- <img src="la.jpg" alt="Los Angeles" class="d-block" style="width:100%"> --}}
+       <img src="pic2.jpg" alt="Los Angeles"class="d-block" style="width:100%">
       <div class="carousel-text">
-        <h1>Welfare Organizaion</h1>
-        <p>They contrivvuted 4.7 Millions in a car crash incident</p>
+        <h1>Brighter Futures Foundation</h1>
+        <p>Helps to provide critical resources and support to children in need, including education, healthcare, and food assistance. <br>
+            Works to ensure that every child has the opportunity to thrive and reach their full potential.
+
+        </p>
       </div>
     </div>
     <div class="carousel-item">
       {{!-- <img src="chicago.jpg" alt="Chicago" class="d-block" style="width:100%"> --}}
       <div class="carousel-text">
-        <h1>Welfare Organizaion</h1>
-        <p>They contrivvuted 4.7 Millions in a car crash incident</p>
+        <h1>Rise Above Charity</h1>
+        <p>provide immediate assistance to communities affected by natural disasters, such as hurricanes, earthquakes, and wildfires. <br>
+            Work to provide food, shelter, medical assistance, and other critical resources to those in need.</p>
       </div>
     </div>
     <div class="carousel-item">
       {{!-- <img src="./assets/images/Car crash.jpg" alt="New York" class="d-block" style="width:100%"> --}}
       <div class="carousel-text">
-        <h1>Welfare Organizaion</h1>
-        <p>They contrivvuted 4.7 Millions in a car crash incident</p>
+        <h1>Light the Way Charity</h1>
+        <p>Work to promote and protect the rights of individuals and communities around the world, including advocating for gender equality, <br>
+            ending discrimination, and combating human trafficking and exploitation.</p>
       </div>
     </div>
   </div>
@@ -245,8 +237,9 @@
                         <!--<i class='bx bx-buildings bx-sm text-light'></i> -->
                     </a>
                     <p class="text-light my-lg-4 my-2">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut.
+                         Be the change you want to see in the world - <br>
+                         We believe that everyone has the power to make a difference. <br>
+                         Join us in creating a brighter future for all.
                     </p>
                     <ul class="list-inline footer-icons light-300">
                         <li class="list-inline-item m-0">
@@ -284,16 +277,13 @@
                                 <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light" href="index.html">Home</a>
                             </li>
                             <li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="about.html">About Us</a>
+                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/charity">Charity</a>
                             </li>
                             <li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="work.html">Work</a>
+                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/Organization">Organizations</a>
                             </li>
                             <li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i></i><a class="text-decoration-none text-light py-1" href="pricing.html">Price</a>
-                            </li>
-                            <li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="contact.html">Contact</a>
+                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/contact-us">Contact</a>
                             </li>
                         </ul>
                 </div>
@@ -303,10 +293,10 @@
                     <h2 class="h4 pb-lg-3 text-light light-300">For Client</h2>
                     <ul class="list-unstyled text-light light-300">
                         <li class="pb-2">
-                            <i class='bx-fw bx bx-phone bx-xs'></i><a class="text-decoration-none text-light py-1" href="tel:010-020-0340">010-020-0340</a>
+                            <i class='bx-fw bx bx-phone bx-xs'></i><a class="text-decoration-none text-light py-1" href="tel:010-020-0340">072-020-0340</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bx-mail-send bx-xs'></i><a class="text-decoration-none text-light py-1" href="mailto:info@company.com">info@company.com</a>
+                            <i class='bx-fw bx bx-mail-send bx-xs'></i><a class="text-decoration-none text-light py-1" href="mailto:info@company.com">info@charity.com</a>
                         </li>
                     </ul>
                 </div>
