--- a/views/admin/admin-view-donations-posted.hbs
+++ b/views/admin/admin-view-donations-posted.hbs
@@ -60,13 +60,18 @@
                     </h6>
                     <ul class="nav flex-column mb-2">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span data-feather="file-text"></span> Today
+                            <a class="nav-link" href="/report/donors">
+                                <span data-feather="file-text"></span> Donors
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span data-feather="file-text"></span> Current Month
+                            <a class="nav-link" href="/report/organizations">
+                                <span data-feather="file-text"></span> Organizations
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/report/donations">
+                                <span data-feather="file-text"></span> Donations
                             </a>
                         </li>
                     </ul>
