Added organization reports

--- a/views/Organization/donations_posted.hbs
+++ b/views/Organization/donations_posted.hbs
@@ -218,21 +218,9 @@
           </h6>
           <ul class="nav flex-column mb-2">
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="/organization-report">
                 <span data-feather="file-text"></span>
-                This week
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                This month
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                All
+                Donations
               </a>
             </li>
           </ul>
