--- a/views/Organization/reports.hbs
+++ b/views/Organization/reports.hbs
@@ -21,6 +21,7 @@
 
   <link rel="stylesheet" href="../assets/organization_home.css">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 
 
   <style>
@@ -226,7 +227,7 @@
         <div class="position-sticky pt-3">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/organization-profile">
+              <a class="nav-link" aria-current="page" href="/organization-profile">
                 <span data-feather="home"></span>
                 About The company
               </a>
@@ -253,7 +254,7 @@
           </h6>
           <ul class="nav flex-column mb-2">
             <li class="nav-item">
-              <a class="nav-link" href="/organization-report">
+              <a class="nav-link active" href="/organization-report">
                 <span data-feather="file-text"></span>
                 Donations
               </a>
@@ -265,80 +266,8 @@
       <div class="container py-5">
 
         <div class="col-lg-8 ml-auto mr-auto">
-          <div class="card mb-4">
-            <div class="card-body">
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">ID</p>
-                  <p class="mb-0" id="ID">some text</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-0" id="ID"></p>
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Name</p>
-                  <p class="mb-0" id="Name">some text</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-0" id="Full_Name"></p>
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Email</p>
-                  <p class="mb-0" id="Email">some text</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-0" id="email"></p>
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Phone</p>
-                  <p class="mb-0" id="Phone">some text</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-0" id="phone"></p>
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Description</p>
-                  <p class="mb-0" id="Description">some text</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-0" id="phone"></p>
-                </div>
-              </div>
-            </div>
-          </div>
+      <center><canvas id="cht" style="max-width: 700px;width: 100%;"></canvas></center>
 
-          <div class="row">
-            <div class="table-responsive">
-              <table class="table table-light">
-                <thead>
-                  <tr>
-                    <th scope="col">Donor</th>
-                    <th scope="col">Item</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col">Dated Received</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Contact them</th>
-                  </tr>
-                </thead>
-                <tbody id="table">
-                  
-                </tbody>
-              </table>
-            </div>
-
-          </div>
         </div>
       </div>
     </div>
@@ -367,6 +296,6 @@
     </div>
     {{!-- End of the modal --}}
 </body>
-<script src="../assets/js/organization/organization_home.js"></script>
+<script src="../assets/js/organization/reports.js"></script>
 
 </html>
